# codeindex

./: CHANGELOG.md  HANDOFF.md  README.md  ROADMAP.md  analyze_repo.py  claude_prompt.md  pyproject.toml  repo-viz-explorer.html  repo_graph.json  server.py
.claude/: settings.local.json
analyzers/: __init__.py  base.py  css_analyzer.py  js_analyzer.py  python_analyzer.py
codeindex/: cli.py  index.py  mcp_server.py  symbol_extractor.py
codeindex/semantic/: __init__.py  provider.py  search.py
codeindex/store/: __init__.py  db.py
codeindex/temporal/: __init__.py  history.py
docs/: CKG-INTERNALS.md  codeindex-temporal-knowledge-graph.md  evaluation-prompt.md
tests/: test_phase1.py  test_phase2.py  test_phase3.py
